--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "@faker-js/faker": "^9.0.0",
     "@internxt/eslint-config-internxt": "1.0.10",
     "@internxt/prettier-config": "internxt/prettier-config#v1.0.2",
-    "@playwright/test": "^1.56.1",
+    "@playwright/test": "^1.57.0",
     "@svgr/rollup": "^8.1.0",
     "@testing-library/dom": "^7.26.0",
     "@testing-library/jest-dom": "^6.6.2",
@@ -151,13 +151,13 @@
     "prettier": "^3.3.3",
     "process": "^0.11.10",
     "prop-types": "^15.7.2",
-    "sass": "^1.32.4",
+    "sass": "^1.77.0",
     "stylelint": "^16.10.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-scss": "^6.8.1",
     "tailwindcss": "^3.3.4",
     "typescript": "^4.4.2",
-    "vite": "=7.0.8",
+    "vite": "=6.4.1",
     "vite-plugin-bundle-obfuscator": "^1.7.0",
     "vite-plugin-node-polyfills": "=0.23.0",
     "vite-plugin-static-copy": "^3.1.2",
@@ -174,6 +174,8 @@
     ]
   },
   "resolutions": {
-    "glob": "^10.5.0"
+    "glob": "^10.5.0",
+    "vite": "6.4.1",
+    "**/vite": "6.4.1"
   }
 }
