--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
   },
   "resolutions": {
     "glob": "^10.5.0",
-    "js-yaml": "^4.1.1"
+    "js-yaml": "^4.1.1",
+    "vitest/vite": "5.4.21"
   }
 }
